Add zod validation
